package com.uhi_visualizer.exceptions;

public class DuplicateDataPointException extends RuntimeException{
        public DuplicateDataPointException(String message){
            super(message);
        }
    }

