package com.uhi_visualizer.exceptions;

public class InvalidColumnException extends RuntimeException {

        public InvalidColumnException(String message){
            super(message);
        }
    }


