package com.uhi_visualizer.exceptions;

public class InvalidValueTypeException extends RuntimeException {

    public InvalidValueTypeException(String message) {
        super(message);
    }
}


